--- a/frontend/src/components/DetailedView.css
+++ b/frontend/src/components/DetailedView.css
@@ -1,5 +1,7 @@
+
+
 .container{
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,8 +11,12 @@
     position: relative;
     overflow: auto;
     z-index: 300;
-    width: 500px;
-    height: 500px;
-    background-color: lightpink;
+    width: 800px;
+    height: 700px;
+    background-color: #f3c2c2;
     border-radius: 14px;
+}
+
+.fileText{
+    padding: 20px;
 }
